--- a/src/Calculator/Views/CalculatorProgrammerRadixOperators.xaml
+++ b/src/Calculator/Views/CalculatorProgrammerRadixOperators.xaml
@@ -1,6 +1,7 @@
 <UserControl x:Class="CalculatorApp.CalculatorProgrammerRadixOperators"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:Windows10version1809="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract, 7)"
              xmlns:common="using:CalculatorApp.Common"
              xmlns:controls="using:CalculatorApp.Controls"
              xmlns:converters="using:CalculatorApp.Converters"
@@ -235,6 +236,7 @@
                                      Glyph="&#xF1AA;">
                 <Button.Flyout>
                     <Flyout x:Name="bitwiseFlyout"
+                            Windows10version1809:AreOpenCloseAnimationsEnabled="False"
                             FlyoutPresenterStyle="{ThemeResource OverflowFlyoutStyle}"
                             Placement="Bottom">
                         <Grid x:Name="bitwiseGrid"
@@ -392,6 +394,7 @@
                                      Glyph="&#xF1AA;">
                 <Button.Flyout>
                     <Flyout x:Name="BitShiftFlyout"
+                            Windows10version1809:AreOpenCloseAnimationsEnabled="False"
                             FlyoutPresenterStyle="{ThemeResource OverflowFlyoutStyle}"
                             Placement="Bottom">
                         <StackPanel Padding="6">
