--- a/src/Calculator/Views/CalculatorScientificOperators.xaml
+++ b/src/Calculator/Views/CalculatorScientificOperators.xaml
@@ -1,6 +1,7 @@
 <UserControl x:Class="CalculatorApp.CalculatorScientificOperators"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:Windows10version1809="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract, 7)"
              xmlns:controls="using:CalculatorApp.Controls"
              xmlns:converters="using:CalculatorApp.Converters"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -374,6 +375,7 @@
                                      Glyph="&#xF1AA;">
                 <Button.Flyout>
                     <Flyout x:Name="Trigflyout"
+                            Windows10version1809:AreOpenCloseAnimationsEnabled="False"
                             FlyoutPresenterStyle="{ThemeResource OverflowFlyoutStyle}"
                             Placement="Bottom">
                         <Grid x:Name="TrigGrid"
@@ -732,6 +734,7 @@
                                      Glyph="&#xF1AA;">
                 <Button.Flyout>
                     <Flyout x:Name="FuncFlyout"
+                            Windows10version1809:AreOpenCloseAnimationsEnabled="False"
                             FlyoutPresenterStyle="{ThemeResource OverflowFlyoutStyle}"
                             Placement="Bottom">
                         <Grid x:Name="FuncGrid"
@@ -958,6 +961,7 @@
                                            Style="{StaticResource AccentEmphasizedCalcButtonStyle}"
                                            AutomationProperties.AutomationId="squareRootButton"
                                            ButtonId="Sqrt"
+                                           Click="shiftButton_Uncheck"
                                            Content="&#xE94B;"/>
                 <controls:CalculatorButton x:Name="cubeRootButton"
                                            x:Uid="cubeRootButton"
@@ -965,6 +969,7 @@
                                            Style="{StaticResource AccentEmphasizedCalcButtonStyle}"
                                            AutomationProperties.AutomationId="cubeRootButton"
                                            ButtonId="CubeRoot"
+                                           Click="shiftButton_Uncheck"
                                            Content="&#xE94B;&#xE94B;&#xE94B;"/>
                 <controls:CalculatorButton x:Name="ySquareRootButton"
                                            x:Uid="ySquareRootButton"
@@ -972,6 +977,7 @@
                                            Style="{StaticResource AccentEmphasizedCalcButtonStyle}"
                                            AutomationProperties.AutomationId="ySquareRootButton"
                                            ButtonId="YRootX"
+                                           Click="shiftButton_Uncheck"
                                            Content="&#xf7cd;"/>
                 <controls:CalculatorButton x:Name="twoPowerXButton"
                                            x:Uid="twoPowerXButton"
@@ -979,6 +985,7 @@
                                            Style="{StaticResource AccentEmphasizedCalcButtonStyle}"
                                            AutomationProperties.AutomationId="twoPowerXButton"
                                            ButtonId="TwoPowerX"
+                                           Click="shiftButton_Uncheck"
                                            Content="&#xF7CC;&#xF7CC;"/>
                 <controls:CalculatorButton x:Name="logBaseX"
                                            x:Uid="logBaseX"
@@ -986,6 +993,7 @@
                                            Style="{StaticResource AccentEmphasizedOperatorCalcButtonStyle}"
                                            AutomationProperties.AutomationId="logBaseX"
                                            ButtonId="LogBaseX"
+                                           Click="shiftButton_Uncheck"
                                            Content="logₓ"/>
                 <controls:CalculatorButton x:Name="powerOfEButton"
                                            x:Uid="powerOfEButton"
@@ -993,6 +1001,7 @@
                                            Style="{StaticResource AccentEmphasizedCalcButtonStyle}"
                                            AutomationProperties.AutomationId="powerOfEButton"
                                            ButtonId="EPowerX"
+                                           Click="shiftButton_Uncheck"
                                            Content="&#xf7ce;"/>
             </Grid>
         </Grid>
