Add push indicator for operator buttons

--- a/src/Calculator/App.xaml
+++ b/src/Calculator/App.xaml
@@ -568,7 +568,8 @@
                                         <TextBlock x:Name="trigTextBlock"
                                                    VerticalAlignment="Center"
                                                    Text="{TemplateBinding Text}"/>
-                                        <FontIcon Margin="6,0,0,0"
+                                        <FontIcon x:Name="ChevronFontIcon"
+                                                  Margin="6,0,0,0"
                                                   VerticalAlignment="Center"
                                                   FontFamily="{StaticResource CalculatorFontFamily}"
                                                   FontSize="8"
