--- a/src/Calculator/App.xaml
+++ b/src/Calculator/App.xaml
@@ -163,6 +163,7 @@
             <GridLength x:Key="HamburgerHeightGridLength">40</GridLength>
 
             <x:Double x:Key="CalcButtonCaptionSize">34</x:Double>
+            <x:Double x:Key="CalcStandardOperatorCaptionSizeExtraLarge">48</x:Double>
             <x:Double x:Key="CalcStandardOperatorCaptionSizeLarge">24</x:Double>
             <!-- Numpad Standard/Scientific in Fill/Full -->
             <x:Double x:Key="CalcStandardOperatorCaptionSize">20</x:Double>
@@ -1349,7 +1350,6 @@
                             <AddDeleteThemeTransition/>
                             <ContentThemeTransition/>
                             <ReorderThemeTransition/>
-                            <EntranceThemeTransition IsStaggeringEnabled="False"/>
                         </TransitionCollection>
                     </Setter.Value>
                 </Setter>
